# rest-demo

./: .env  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  logging.ini  pyproject.toml  pytest.ini  requirements.txt
alembic/: env.py
alembic/versions/: 1_init_tables.py
app/: main.py
app/axa_xl/: api_types.py  config.py  endpoints.py  observability.py  services.py
app/axa_xl/database/: db_operations.py  types.py
functional_tests/: conftest.py  test_insurance_quotes.py
